<resources>
    <string name="app_name">Popular Movies 1</string>
    <string name="movie_name_label">Movie Title</string>
    <string name="popular_menu">Popular</string>
    <string name="toprated_menu">Top Rated</string>
    <string name="overview">Overview</string>
    <string name="average_vote">average vote</string>
    <string name="release_date">release date</string>
    <string name="original_title">Original Title</string>
    <string name="rating_tv">Rating</string>
    <string name="release_date_label">Release Date</string>
    <string name="img_poster">Image Poster</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="loadin_text">Loading…</string>
    <string name="reviews">Reviews:</string>
    <string name="trailers_text">Trailers</string>
    <string name="trailer_thumbnail">Trailer Thumbnail</string>
    <string name="add_to_favs">Add to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="remove_frm_favs">Remove from favorites</string>
</resources>
